add a few lines

--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
         <ul id="pageItemList">
 
         </ul>
+        <script>
+            num = -3
+            if (num > 0) {
+                console.log(`${num} is a positive number`)
+            } else {
+                console.log(`${num} is a negative number`)
+            }
+            //  -3 is a negative number
+        </script>
+
     </p>
 </body>
 
