add inline script

--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
             }
 
             displayFamilyName(ladeleFamily, 5)
+
+
+            let isRaining = true
+            if (isRaining) {
+                console.log('Remember to take your rain coat.')
+            }
         </script>
         <h2>End of page</h2>
     </p>
