Modify .js file to reflect updated values

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h2>End of page</h2>
     <h1>Content goes here.</h1>
 
-    <button onclick="myFirstButton()" id="myFirstButton"> Mosun</button>
+    <button onclick="myFirstButton()" id="myFirstButton">Randomize</button>
 
     <button onclick="pageItemList()">Get list</button>
 
@@ -25,40 +25,10 @@
         <ul id="pageItemList">
 
         </ul>
-        <script>
-            num = -3
-            if (num > 0) {
-                console.log(`${num} is a positive number`)
-            } else {
-                console.log(`${num} is a negative number`)
-            }
-            //  -3 is a negative number
-        </script>
 
 
-        <script>
-            let ladeleFamily = ['ranti', 'layi', 'kemi', 'muyiwa', 'funmi', 'mosun', 'bisi']
-            let adelaiyeFamily = ['iyabo', 'tunne', 'abey', 'nike', 'yemi', 'kola'];
-            let olowofelaFamily = ['iyabo', 'gbenga', 'bosun', 'rolake', 'kunbi']
-
-            function displayFamilyName(family, position) {
-                let result = family[position];
-                if (result == 'mosun') {
-                    console.log('Superstar')
-                } else {
-                    console.log(result);
-                }
-
-            }
-
-            displayFamilyName(ladeleFamily, 5)
 
 
-            let isRaining = true
-            if (isRaining) {
-                console.log('Remember to take your rain coat.')
-            }
-        </script>
         <h2>End of page</h2>
     </p>
 </body>
