Refine test scripts

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="./styles/mainpage.css">
-    <script type="text/javascript" src="./scripts/myFirstButton.js"></script>
-    <script type="text/javascript" src="./scripts/partTwo.js"></script>
+    <script type="module" src="./scripts/myFirstButton.js"></script>
+    <script type="module" src="./scripts/partTwo.js"></script>
     <title>Our Funky HTML Page</title>
 </head>
 
@@ -36,6 +36,7 @@
 
         <h2>End of page</h2>
     </p>
+
 </body>
 
 </html>
