--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="./styles/mainpage.css">
     <script type="module" src="./scripts/myFirstButton.js"></script>
     <script type="module" src="./scripts/partTwo.js"></script>
+    <script type="module" src="./scripts/testground.js"></script>
     <title>Our Funky HTML Page</title>
 </head>
 
